https://github.com/kent-matsui/kenton/issues/1 jan272020_modify_progressbar

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -38,6 +38,7 @@ Base
 html {
   -ms-touch-action: manipulation;
   touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 }
 
 html, body {
