--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,10 +15,10 @@
     </a>
   </div>
 
-  <div class="header__toggle-btn" data-nav="close">
+  <button class="header__toggle-btn" data-nav="close">
     <span class="header__toggle-btn-text">Menu</span>
     <span class="header__toggle-btn-bar"></span>
-  </div>
+  </button>
 
   <nav class="header__nav">
     <div class="header__nav-overlay"></div>
